<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectIngredientsFragment">

    <TextView
        android:id="@+id/txtIngredList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients_list"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cuisine_spinner" />

    <TextView
        android:id="@+id/lblCuisine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_cuisine"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Spinner
        android:id="@+id/cuisine_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblCuisine" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgSpice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/stockPhotos"
                android:cropToPadding="true"
                android:maxWidth="213dp"
                android:maxHeight="140dp"
                android:scaleType="fitCenter"
                android:src="@drawable/_400_herbs_and_spices_with_wooden_spoons" />

            <TextView
                android:id="@+id/lblSpice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_weight="1"
                android:text="@string/herbs_spices" />

            <Spinner
                android:id="@+id/herbs_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:minWidth="60dp"
                android:minHeight="40dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgProtein"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/stockPhotos"
                android:cropToPadding="true"
                android:maxWidth="213dp"
                android:maxHeight="140dp"
                android:scaleType="fitCenter"
                android:src="@drawable/vecteezy_beef_meat_and_fish_pieces_6419571_362" />

            <TextView
                android:id="@+id/lblProtien"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:text="@string/protein" />

            <Spinner
                android:id="@+id/protein_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:minWidth="60dp"
                android:minHeight="40dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgStarch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/stockPhotos"
                android:cropToPadding="true"
                android:maxWidth="200dp"
                android:maxHeight="140dp"
                android:scaleType="fitCenter"
                android:src="@drawable/_920_raw_spaghetti_italian_pasta_uncooked_raw_macaroni_instant_noodles_and_rice_vermicelli_in_package_pasta_product_dry_food_non_perishable_food" />

            <TextView
                android:id="@+id/lblStarch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_weight="1"
                android:text="@string/starches" />

            <Spinner
                android:id="@+id/starch_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:minWidth="60dp"
                android:minHeight="40dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgVeg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:cropToPadding="true"
                android:maxWidth="213dp"
                android:maxHeight="140dp"
                android:scaleType="fitCenter"
                android:src="@drawable/_400_a_variety_of_organic_fruits_and_vegetables" />

            <TextView
                android:id="@+id/lblFruitandVeg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_weight="1"
                android:text="@string/fruits_vegetables_grains_legumes" />

            <Spinner
                android:id="@+id/fruits_and_veg_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:minWidth="60dp"
                android:minHeight="40dp" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIngredList">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search"
                app:layout_constraintBottom_toTopOf="@+id/btnLog"
                app:layout_constraintEnd_toStartOf="@+id/btnClear"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtIngredList" />

            <Button
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear"
                app:layout_constraintBottom_toBottomOf="@+id/btnSearch"
                app:layout_constraintTop_toTopOf="@+id/btnSearch"
                app:layout_constraintVertical_bias="0.0"
                tools:layout_editor_absoluteX="323dp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--            <Button-->
            <!--                android:id="@+id/btnLog"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="1"-->
            <!--                android:text="@string/login"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintEnd_toEndOf="@+id/btnSearch"-->
            <!--                app:layout_constraintStart_toStartOf="@+id/btnSearch" />-->

            <!--            <Button-->
            <!--                android:id="@+id/btnSaved"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_weight="1"-->
            <!--                android:text="@string/saved_cards"-->
            <!--                app:layout_constraintBottom_toBottomOf="parent"-->
            <!--                app:layout_constraintEnd_toEndOf="@+id/btnClear"-->
            <!--                app:layout_constraintStart_toStartOf="@+id/btnClear" />-->

        </LinearLayout>


    </LinearLayout>

    <!--    <Button-->
    <!--        android:id="@+id/btnLogout"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/logout"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />-->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/quot_https_www_vecteezy_com_free_photos_quot_free_stock_photos_by_vecteezy"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
    <!--        app:layout_constraintTop_toBottomOf="@+id/btnLogout" />-->


</androidx.constraintlayout.widget.ConstraintLayout>